add form validation and clear after a create

--- a/super-comic-buttons/style.css
+++ b/super-comic-buttons/style.css
@@ -95,3 +95,6 @@ input[type=text], .button{
   .col-11 {width: 96.66666666%;}
   .col-12 {width: 100%;}
 }
+input[type=text].invalid {
+  border: 1px red solid;
+}
