--- a/super-comic-buttons/style.css
+++ b/super-comic-buttons/style.css
@@ -27,7 +27,7 @@ p{
   border-radius: 0.2em;
   padding: 0.2em;
 }
-input[type=button]{
+button{
   border: 1px solid #2060a8;
   background-color: #5888c8;
   width: 100%;
@@ -35,13 +35,14 @@ input[type=button]{
   margin: 0.2em;
   border-radius: 0.2em;
   color: #083860;
+  text-align: center;
 }
-input[type=button]:disabled{
+button:disabled{
   background-color: #909090;
   border-color: #484848;
   color: #484848;
 }
-input[type=button].attention:not(:disabled){
+button.attention:not(:disabled){
   background-color: #f85048;
   border-color: #c83838;
   color: #902010;
@@ -80,6 +81,11 @@ td{
 }
 .wrap {
   word-wrap: normal;
+}
+.custom {
+    border-radius: 0.2em;
+    padding: 0.2em;
+    text-align: center;
 }
 .ng-hide {
     display: none!important;
